# ButterflyC

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.yml  pyproject.toml  requirements.txt
app/: app.py
app/templates/: result.html
cpp/: CMakeLists.txt  README.md
cpp/src/: server.cpp
docker/: Dockerfile.cpp
main/: __init__.py  download_dataset.py  export_onnx.py  export_serving.py  recognize.py  tf_export.py  torch_model.py  train.py
main/utils/: __init__.py  config.py  labels.py  process.py  torch_process.py  training_monitor.py
